# my_fastapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py  schemas.py
tests/: test_main.py
